--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <title>AR + video con sonido al detectar la marca</title>
+    <title>AR – vídeo con sonido al detectar la marca</title>
 
-    <!-- A-Frame & AR.js -->
+    <!-- A-Frame + AR.js -->
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 
@@ -12,21 +12,19 @@
     <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
     <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
 
-    <!-- Componente para reproducir vídeo solo cuando:
-         1) el usuario ya interactuó (desbloquea audio) y
-         2) la marca está visible                                       -->
+    <!-- Componente: reproduce vídeo sólo si (1) hubo tap y (2) la marca está a la vista -->
     <script>
       AFRAME.registerComponent('videohandler', {
         init () {
           const marker = this.el;
-          const vid    = document.querySelector('#vid');
+          const video  = document.querySelector('#vid');
 
-          let audioUnlocked = false;  // ¿ya hubo gesto?
-          let markerVisible = false;  // ¿marca a la vista?
+          let tapOk        = false;  // ¿el usuario ya tocó?
+          let markerOn     = false;  // ¿la marca está visible?
 
-          /* --- 1) Esperar UN tap/click para habilitar audio --- */
+          /* 1 . Un solo gesto para habilitar audio */
           const unlock = () => {
-            audioUnlocked = true;
+            tapOk = true;
             tryPlay();
             window.removeEventListener('click',  unlock);
             window.removeEventListener('touchend', unlock);
@@ -34,84 +32,70 @@
           window.addEventListener('click',  unlock);
           window.addEventListener('touchend', unlock);
 
-          /* --- 2) Controlar visibilidad de la marca --- */
+          /* 2 . Visibilidad de la marca */
           marker.addEventListener('markerFound', () => {
-            markerVisible = true;
+            markerOn = true;
             tryPlay();
           });
           marker.addEventListener('markerLost', () => {
-            markerVisible = false;
-            vid.pause();
+            markerOn = false;
+            video.pause();
           });
 
-          /* --- 3) Reproducir sólo si se cumplen las dos condiciones --- */
+          /* 3 . Reproduce únicamente si ambas condiciones se cumplen */
           function tryPlay () {
-            if (audioUnlocked && markerVisible) {
-              vid.play().catch(() => {});  // ignora errores de política
+            if (tapOk && markerOn) {
+              video.play().catch(()=>{});      // ignora posibles bloqueos
             }
           }
         }
       });
     </script>
 
-    <!-- Opcional: hace transparente el fondo del renderizador -->
     <style>
-      html,body{margin:0;overflow:hidden;background:#000;}
+      /* Nada que tape la cámara */
+      html,body{margin:0;overflow:hidden;}
       a-scene{position:fixed;top:0;left:0;width:100%;height:100%;}
     </style>
   </head>
 
   <body>
 
-    <!-- Escena AR -->
     <a-scene
+      embedded
       vr-mode-ui="enabled:false"
       loading-screen="enabled:false"
-      renderer="alpha:true"
       arjs="sourceType:webcam;debugUIEnabled:false"
-      embedded
-      gesture-detector
-      id="scene">
+      gesture-detector>
 
-      <!-- Activos -->
       <a-assets>
-        <!-- SIN muted / SIN autoplay para que el sonido arranque normal -->
+        <!-- sin muted ni autoplay -->
         <video id="vid"
                src="assets/asset.mp4"
                preload="auto"
                loop
                crossorigin="anonymous"
                playsinline
-               webkit-playsinline>
-        </video>
+               webkit-playsinline></video>
       </a-assets>
 
-      <!-- Marcador -->
       <a-marker type="pattern"
-                preset="custom"
                 url="assets/marker.patt"
                 videohandler
                 smooth="true"
                 smoothCount="10"
                 smoothTolerance="0.01"
-                smoothThreshold="5"
-                raycaster="objects:.clickable"
-                emitevents="true"
-                cursor="fuse:false;rayOrigin:mouse"
-                id="markerA">
+                smoothThreshold="5">
 
         <a-video src="#vid"
                  scale="1 1 1"
                  position="0 0.1 0"
                  rotation="-90 0 0"
-                 class="clickable"
-                 gesture-handler>
-        </a-video>
+                 gesture-handler></a-video>
       </a-marker>
 
-      <!-- Cámara -->
       <a-entity camera></a-entity>
-
     </a-scene>
+
   </body>
 </html>
