--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="utf-8" />
-  <title>AR-video con sonido (fix proporción + zoom)</title>
+  <title>AR-video con sonido (fix iOS + proporción + zoom)</title>
 
   <!-- A-Frame + AR.js -->
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
@@ -13,17 +13,21 @@
   <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
 
   <script>
-    // 🔹 Forzar cámara trasera gran angular sin zoom
+    /* 🔹 Forzar cámara trasera normal sin zoom */
     const origGetUserMedia = navigator.mediaDevices.getUserMedia.bind(navigator.mediaDevices);
     navigator.mediaDevices.getUserMedia = (constraints) => {
       if (constraints.video) {
-        constraints.video.facingMode = { exact: "environment" };
-        constraints.video.width = { ideal: 1280 };
-        constraints.video.height = { ideal: 720 };
+        constraints.video = {
+          facingMode: { ideal: "environment" }, // cámara trasera normal
+          width: { ideal: 640 },
+          height: { ideal: 480 },
+          aspectRatio: { ideal: 4/3 }
+        };
       }
       return origGetUserMedia(constraints);
     };
 
+    /* 🔹 Componente para manejar video y audio */
     AFRAME.registerComponent('videohandler', {
       init () {
         const marker  = this.el;
@@ -79,12 +83,14 @@
 </head>
 
 <body style="margin:0; overflow:hidden;">
+  <!-- Overlay para activar audio -->
   <div id="overlay">Toca la pantalla para activar el audio ▶️</div>
 
+  <!-- Escena -->
   <a-scene
     vr-mode-ui="enabled:false"
     loading-screen="enabled:false"
-    arjs="sourceType:webcam;debugUIEnabled:false"
+    arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;"
     embedded
     gesture-detector>
 
@@ -109,7 +115,7 @@
               smoothThreshold="5"
               emitevents="true">
 
-      <!-- Usamos scale como antes para mantener proporción -->
+      <!-- Mantener escala y proporción como en tu código original -->
       <a-video src="#vid"
                scale="1 1 1"
                position="0 0.1 0"
